WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228553
Fix build with SDKs containing new CFNetwork SPI declaration
https://bugs.webkit.org/show_bug.cgi?id=228553
Summary
Fix build with SDKs containing new CFNetwork SPI declaration
Alex Christensen
Reported
2021-07-28 08:38:01 PDT
Fix build with SDKs containing new CFNetwork SPI declaration
Attachments
Patch
(1.61 KB, patch)
2021-07-28 08:40 PDT
,
Alex Christensen
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-07-28 08:40:22 PDT
Created
attachment 434430
[details]
Patch
Alex Christensen
Comment 2
2021-07-28 08:40:25 PDT
<
rdar://problem/81202574
>
Alex Christensen
Comment 3
2021-07-28 08:55:40 PDT
http://trac.webkit.org/r280384
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug