Fix build with SDKs containing new CFNetwork SPI declaration https://bugs.webkit.org/show_bug.cgi?id=228553 <rdar://81202574>

Reviewed by Brady Eidson.

CFNSURLConnection.h also has "@interface NSURLSessionConfiguration ()"
ObjC doesn't like it if you have the exact same thing in the parentheses and a duplicate declaration.
I reproduced the build failure with a modified SDK and verified this fixes it.

* pal/spi/cf/CFNetworkSPI.h:



Canonical link: https://commits.webkit.org/240027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280384 268f45cc-cd09-0410-ab3c-d52691b4dbfc