Source/WebCore/PAL/pal/spi/cf/CFNetworkSPI.h
@@ -488,7 +488,7 @@ WTF_EXTERN_C_END
 - (void)_setMIMEType:(NSString *)type;
 @end
 
-@interface NSURLSessionConfiguration ()
+@interface NSURLSessionConfiguration (SPI)
 // FIXME: Remove this once rdar://problem/40650244 is in a build.
 @property (copy) NSDictionary *_socketStreamProperties;
 // FIXME: Remove this once rdar://80550123 is in a build.
